# dynamodb-back-to-basics

./: .env.example  .env.test  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.dynamodb/: init-db.sh
.dynamodb/data/: booking.create-table.json  booking.delete-table.json  booking.fixtures.json
app/: __init__.py  main.py  settings.py
app/exceptions/: booking_exceptions.py
app/libs/: __init__.py  aws.py  logger.py  settings.py
app/routers/: booking.py  health.py
app/schemas/: bike.py  booking.py  common.py  user.py
app/use_cases/: __init__.py  create_booking.py  delete_booking.py  get_available_bikes.py  get_booking_detail.py  get_bookings_for_bike.py  get_bookings_for_user.py  update_booking.py
tests/: conftest.py
tests/routers/: test_booking.py
tests/use_cases/: test_create_booking.py  test_delete_booking.py  test_get_available_bikes.py
