[tool.poetry]
name = "dynamodb-back-to-basics"
version = "0.1.0"
description = ""
authors = ["massimobiagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
boto3 = "^1.34.130"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
